--- a/registro.html
+++ b/registro.html
@@ -133,8 +133,9 @@
 <script>
   document.getElementById('reg').addEventListener('submit', (e)=>{
     e.preventDefault();
-    alert('¡Registro enviado (demo)! Aquí conectarías tu backend o Firebase.');
+    alert('¡Registro enviado');
   });
 </script>
 </body>
 </html>
+
