--- a/recuperar.html
+++ b/recuperar.html
@@ -107,8 +107,9 @@
 <script>
   document.getElementById('rec').addEventListener('submit',(e)=>{
     e.preventDefault();
-    alert('Te enviamos un enlace de recuperación (demo).');
+    alert('Te enviamos un enlace de recuperación');
   });
 </script>
 </body>
 </html>
+
